# cpp-toy-interp

./: .gitignore  .lvimrc  CMakeLists.txt  README.md  flake.nix
src/: ast.cpp  ast.hpp  eval.cpp  eval.hpp  formatter.cpp  formatter.hpp  main.cpp  parser.cpp  parser.hpp  readline.cpp  readline.hpp  tokeniser.cpp  tokeniser.hpp
test/: test_parser.cpp  tests.cpp
